ecriture du readme