@@ -1,56 +1,130 @@
-Application Hautlesbas
+Installation et Exécution
+Prérequis
 
-Application backend Java pour la gestion de vente en ligne de chaussettes. Prérequis
+    JDK 24 installé.
 
-    JDK 24 (obligatoire pour la compatibilité)
+    Maven 3.6+ installé.
 
-    IntelliJ IDEA (Community ou Ultimate)
+Qu'est-ce que Maven ?
 
-    Maven 3.6+ (généralement inclus avec IntelliJ)
+Maven est un outil de gestion et d'automatisation de production de projets logiciels Java. Il gère :
 
-Lancement avec IntelliJ IDEA
-Méthode 1 : Importation directe
+    Les dépendances : Télécharge automatiquement les bibliothèques (H2, Gson, HikariCP) définies dans le pom.xml.
 
-    Ouvrir IntelliJ IDEA
+    Le build : Compile le code source, exécute les tests et package le projet.
 
-    Fichier → Ouvrir (ou Open)
+Commandes
 
-    Sélectionnez le dossier du projet hautlesbas
+    Cloner le dépôt :
+    Bash
 
-    Choisissez "Open as Project"
+git clone https://github.com/votre-repo/hautlesbas.git
+cd hautlesbas
 
-Méthode 2 : Importation Maven
+Compiler le projet :
+Bash
 
-    Fichier → Nouveau → Projet à partir de sources existantes (ou New → Project from Existing Sources)
+mvn clean package
 
-    Sélectionnez le fichier pom.xml
+Lancer l'application : Vous pouvez lancer l'application directement via Maven ou via le JAR généré.
+Bash
 
-    Suivez l'assistant d'importation Maven
+    # Via Maven
+    mvn exec:java -Dexec.mainClass="com.hautlesbas.Main"
 
-    Choisissez JDK 24 dans la configuration du projet
+    # OU via le JAR (après compilation)
+    java -jar target/hautlesbas-1.0-SNAPSHOT.jar --enable-preview
 
-Configuration du JDK dans IntelliJ
+L'API sera accessible sur http://localhost:8080. La base de données hautlesbas_db sera créée automatiquement à la racine du projet au premier lancement.
+Documentation de l'API
+Gestion des Chaussettes
+1. Ajouter une chaussette
 
-Si IntelliJ ne détecte pas automatiquement le JDK 24 :
+    URL : /chaussettes
 
-    Fichier → Structure de projet (ou File → Project Structure)
+    Méthode : POST
 
-    Onglet "Project"
+    Corps (JSON) :
+    JSON
 
-    SDK du projet : Sélectionnez JDK 24
+    {
+      "couleur": "Rouge",
+      "taille": "42",
+      "typeTissu": "Laine",
+      "prix": 12.50
+    }
 
-        Si non disponible : Add JDK → Sélectionnez le dossier d'installation du JDK 24
+    Réponse (201) : Retourne l'objet créé avec son identifiant.
 
-    Niveau du langage : 24 - Modules en cours de preview
+2. Lister les chaussettes
 
-    Cliquez sur "Apply" puis "OK"
+    URL : /chaussettes
 
-Exécution de l'application.
-Exécution directe
+    Méthode : GET
 
-    Ouvrez la classe Main.java dans src/main/java/com/hautlesbas/Main.java
+    Réponse (200) : Liste JSON de toutes les chaussettes en stock.
 
-    Cliquez sur l'icône  verte dans la marge à côté de la méthode main
+3. Modifier une chaussette
 
-    Choisissez "Run 'Main.main()'"
+    URL : /chaussettes/{id}
 
+    Méthode : PUT
+
+    Corps (JSON) : Mêmes champs que le POST.
+
+4. Supprimer une chaussette
+
+    URL : /chaussettes/{id}
+
+    Méthode : DELETE
+
+5. Rechercher
+
+    URL : /chaussettes/recherche?couleur=Rouge&taille=42
+
+    Méthode : GET
+
+Gestion des Ventes
+1. Créer une vente
+
+    URL : /ventes
+
+    Méthode : POST
+
+    Description : Vend des chaussettes existantes. Les chaussettes vendues sont retirées de l'inventaire.
+
+    Corps (JSON) :
+    JSON
+
+    {
+      "chaussettes": [
+        { "identifiant": 1 },
+        { "identifiant": 5 }
+      ]
+    }
+
+    Réponse (201) : Succès.
+
+    Erreur (409) : Si une des chaussettes n'existe pas ou a déjà été vendue.
+
+2. Lister toutes les ventes
+
+    URL : /ventes
+
+    Méthode : GET
+
+3. Rechercher des ventes par date
+
+    URL : /ventes/recherche/date?start=yyyy-MM-dd&end=yyyy-MM-dd
+
+    Méthode : GET
+
+    Exemple : /ventes/recherche/date?start=2023-01-01&end=2023-12-31
+
+4. Annuler une vente
+
+    URL : /ventes/{id}
+
+    Méthode : DELETE
+
+    Effet : Supprime la vente et remet les chaussettes associées dans l'inventaire (Restockage automatique).
